# FastW2V-JNI

./: .gitignore  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DOC.md  Makefile  README.md  README_CN.md  TestW2V.java  build_android.sh  build_local_jni.sh  print_model  print_model.cpp
android_test/: README.md  build_android.sh  run_local_test.sh  settings.gradle
android_test/app/: build.gradle
android_test/app/src/main/: AndroidManifest.xml
android_test/app/src/main/java/com/example/w2v/: AndroidJavaTest.java  MainActivity.java  W2VNative.java
android_test/bert_version/: README.md  README_CN.md  build_android.sh  run_android_sim_test.sh  view.xml
android_test/bert_version/app/: build.gradle
android_test/bert_version/app/src/main/java/com/example/w2v/: AndroidJavaTest.java  MainActivity.java
android_test/bert_version/app/src/main/res/values/: strings.xml
android_test/w2v_version/: README.md  README_CN.md  build_android.sh
android_test/w2v_version/app/: debug.keystore
android_test/w2v_version/app/src/main/java/com/example/w2v/: MainActivity.java  W2VNative.java
android_test/w2v_version/app/src/main/res/layout/: activity_main.xml
data/: qa_list.csv
include/: BertEmbedder.h  BertTokenizer.h  SimilaritySearch.h  TextEmbedder.h  W2VEmbedder.h  W2VEngine.h  com_example_w2v_W2VNative.h  main.h
jni/: CMakeLists.txt  com_example_w2v_W2VNative.cpp
linux_java_test/: build_linux.sh
linux_java_test/libs/: libw2v_jni.dylib
linux_java_test/src/: LinuxJavaTest.java
scripts/: convert_model.py
src/: BertEmbedder.cpp  BertTokenizer.cpp  SimilaritySearch.cpp  TextEmbedder.cpp  W2VEmbedder.cpp  main.cpp
